@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 01:39:17 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 01:42:48 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -24,5 +24,11 @@
   <description>BLACKPINK成員Jennie即將推出新單曲Mantra能否打破近期女Solo歌手的低迷走勢BLACKPINK成員Jennie即將於10月11日推出她的新單曲Mantra這是她自一年前推出YouMe以來的首次發行近期許多女KpopSolo歌手的表現不佳令人懷疑像Jennie這樣成功的偶像是否能夠打破目前的低迷走勢最近幾位女KpopSolo歌手如ChunghaSomi和Sunmi無法在國內和國際市場複製過往的榜單成功以下是她們近...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 01:39:17 +0800</pubDate>
+</item><item>
+  <title>睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動</title>
+  <link>https://www.famechos.me/news/睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動.html</link>
+  <description>2NE1韓國女子演唱組合重聚演唱會經典回歸星期日晚上奧林匹克公園奧林匹克廳OlympicHall響起了ComeBackHome的歌聲標誌著2NE1韓國女子演唱組合的重聚演唱會正式開始這是該組合十多年來的首次演唱會粉絲們的熱情和歡呼聲充滿了整個場館2NE1的四名成員朴山達拉SandaraPark李彩麟CL朴...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 01:42:48 +0800</pubDate>
 </item></channel>
 </rss>
