@@ -1,0 +1,273 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u777d\u9055\u5341\u5e74\uff012NE1\u97d3\u570b\u5973\u5b50\u6f14\u5531\u7d44\u5408\u91cd\u805a\u6f14\u5531\u6703\u71c3\u70b8\u5168\u5834\u3000\u6210\u54e1\u611f\u52d5\u843d\u6dda\u8207\u7c89\u7d72\u8fd1\u8ddd\u96e2\u4e92\u52d5", "description": "\u777d\u9055\u5341\u5e74\uff012NE1\u97d3\u570b\u5973\u5b50\u6f14\u5531\u7d44\u5408\u91cd\u805a\u6f14\u5531\u6703\u71c3\u70b8\u5168\u5834\u3000\u6210\u54e1\u611f\u52d5\u843d\u6dda\u8207\u7c89\u7d72\u8fd1\u8ddd\u96e2\u4e92\u52d5", "url": "https://www.famechos.me/news/\u777d\u9055\u5341\u5e74\uff012NE1\u97d3\u570b\u5973\u5b50\u6f14\u5531\u7d44\u5408\u91cd\u805a\u6f14\u5531\u6703\u71c3\u70b8\u5168\u5834\u3000\u6210\u54e1\u611f\u52d5\u843d\u6dda\u8207\u7c89\u7d72\u8fd1\u8ddd\u96e2\u4e92\u52d5.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T01:42:35.920583+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動.html"/>
+<meta name="description" content="睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場，成員感動落淚與粉絲近距離互動。重溫經典歌曲，感受不變的魅力！">
+
+<meta name="keywords" content="2NE1, 韓國女子演唱組合, 重聚演唱會, 睽違十年, 成員感動落淚, 粉絲近距離互動, K-POP, 女子偶像團體">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動.html" />
+        <meta property="og:title" content="睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動" />
+        <meta property="og:description" content="睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動" />
+        <meta property="twitter:description" content="睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>星期日晚上，奧林匹克公園奧林匹克廳（Olympic Hall）響起了「Come Back Home」的歌聲，標誌著2NE1韓國女子演唱組合的重聚演唱會正式開始。這是該組合十多年來的首次演唱會，粉絲們的熱情和歡呼聲充滿了整個場館。</p>
+<p>2NE1的四名成員——朴山達拉（Sandara Park）、李彩麟（CL）、朴春（Park Bom）和孔旻智（Minzy）——身穿標誌性的混搭服裝，展現了她們獨特的風格。李彩麟穿著醒目的紅色夾克，配上大紅色絲帶，而朴山達拉則展示了一件大膽的西班牙斗篷式夾克。</p>
+<p>演唱會以「Welcome Back」為開場，這是她們三場演唱會的最後一場——另外兩場分別是「Come Back Home」和「Fire」。許多忠實的粉絲——被稱為Black Jack——被感動得流淚。朴山達拉說：「好久不見，Black Jack！如果你們準備好了，就喊出『Let's play』吧！」</p>
+<p>舞台和觀眾席之間的距離使得演唱會的沉浸感更強。儘管相隔多年，四人組仍然呈現了一場強大的表演，重溫了經典歌曲，如「Can't」、「Falling In Love」和「我不在乎」（I Don't Care）。</p>
+<p>編舞精湛，需要比現今一些韓國女子組合的舞蹈更高的能量。年輕成員孔旻智，過去曾被其他成員的才華所掩蓋，但這次她卻展現了真正出色的歌聲和舞蹈。</p>
+<p>演唱會的第一部分結束後，螢幕上播放了包括IU、NewJeans、IVE、TWICE、aespa和Stray Kids在內的韓國流行音樂藝術家的祝賀視頻，慶祝2NE1的15週年演唱會。</p>
+<p>李彩麟隨後以個人表演「The Baddest Female」和「MTBD」迷住了觀眾，身穿長白色毛皮長袍，在舞台上揮灑自如，然後戲劇性地拋開長袍。</p>
+在下一部分，2NE1穿著黑色服裝表演了真摯的抒情歌曲，包括「Missing You」、「It Hurts」、「If I Were You」和「Lonely」。一段懷舊的視頻蒙太奇展示了2NE1的練習生時期，2008年她們努力成為韓國流行音樂偶像，以及自2009年出道以來的組合之旅。<h2>2NE1演唱會：慶祝15週年，與粉絲近距離互動</h2>
+<p>演唱會在她們的熱門歌曲「我是最棒的」（I Am the Best）的爆炸性表演中達到了高潮。觀眾興奮地起舞和歌唱，成員們則穿過人群，與粉絲近距離互動。</p>
+<p>朴山達拉表示，這個場館對她們來說很重要，因為她們在這裡舉行了第一次演唱會。慶祝她們的15週年也是特別的。朴春補充道，她們非常感謝大家在準備這次演唱會期間給予的愛和支持。能夠終於為大家表演，她們感到非常高興。</p>
+<p>朴山達拉繼續說，她知道這等待的時間一定覺得很漫長，但謝謝大家的耐心。十年後第一次見面，帶回了美好的回憶。李彩麟說，她們的目標是通過這次演唱會喚起大家的懷舊感，展現經典的2NE1演唱會的樣子。她們感受到大家的正能量，她們希望大家也感受到了。</p>
+<h2>韓國女子演唱組合2NE1的未來發展藍圖</h2>
+<p>我最近得知2NE1韓國女子演唱組合的未來計劃。據朴山達拉（Sandara Park）透露，最初他們只計劃舉辦一天的演唱會，但門票銷售得非常快，因此他們又增加了兩天。如果他們不考慮再舉辦一場安可演唱會的話，就太可惜了。因此，他們將嘗試預訂一個更大的場地舉辦安可演唱會。</p>
+<p>2NE1韓國女子演唱組合現在準備在亞洲展開巡迴演唱會，計劃在九個城市舉辦15場演唱會。以下是巡迴演唱會的行程表：</p>
+<ul>
+<li>首場演唱會：11月16日在馬尼拉舉行</li>
+<li>其他城市：尚未公布</li>
+</ul>
+<p>我期待著2NE1韓國女子演唱組合的未來計劃，希望他們的演唱會能夠成功舉辦。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rKc4JkpBeUY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html">KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩.html">韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？.html">BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
