@@ -32,4 +32,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/睽違十年！2NE1韓國女子演唱組合重聚演唱會燃炸全場　成員感動落淚與粉絲近距離互動.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T01:42:48+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
